# agent-performance-evaluator

./: .gitignore  README.md  bfcl_llamaindex.py  bfcl_test.py  data_generation.py  evaluation.py  models.toml  py_calling_agent_evaluation.py  pyproject.toml  tool_calling_agent_evaluation.py  utils.py
adapters/: langchain_agent_adapter.py  litellm_adapter.py  llama_index_agent_adapter.py  openai_agent_adapter.py  py_calling_agent_adapter.py  py_calling_agent_adapter_old.py  py_calling_agent_tracker.py
core/: agent.py  complex_value_validation.py  evaluator.py  validation.ipynb  validation.py
results/: BFCL_v3_multiple_llamaindex_results.json  BFCL_v3_multiple_results.json  BFCL_v3_parallel_llamaindex_results.json  BFCL_v3_parallel_multiple_llamaindex_results.json  BFCL_v3_parallel_multiple_results.json  BFCL_v3_parallel_results.json  BFCL_v3_simple_llamaindex_results.json  BFCL_v3_simple_results.json  compare_result.ipynb  compare_result.py  py_calling_agent_claude3_5_sonnet.json  py_calling_agent_deepseek_v3.json  py_calling_agent_gpt_4o.json  py_calling_agent_qwen2_5_14b.json  py_calling_agent_qwen2_5_72b.json  py_calling_agent_qwen2_5_7b.json  test.json  tool_calling_agent_gpt_4o.json
scenarios/: BFCL_v3_multiple_ground_truth.json  BFCL_v3_parallel_ground_truth.json  BFCL_v3_parallel_multiple_ground_truth.json  BFCL_v3_simple_ground_truth.json  event_planning.py  flight_booking.py  ground_truths.json  healthcare_data_processing.py  investment_analysis.py  live_multiple_0-0-0.py  live_multiple_1-0-1.py  live_multiple_100-42-4.py  live_multiple_1000-231-0.py  (+424 more)
(+1078 files in other folders)
